# project-commentator

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: headless.rs  thinking_probe.rs
src-tauri/src/: brains.rs  capture.rs  driver.rs  inference.rs  lib.rs  main.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css  useComments.ts  useServerStatus.ts
web/src/components/: CommentFeed.tsx  StartupGate.tsx
