[package]
name = "project-commentator"
version = "0.1.0"
description = "Project Commentator — screen-capturing AI roast machine"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
llama-cpp-2 = { version = "0.1.150", features = ["metal", "mtmd"] }
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
dirs = "5"
chrono = "0.4"
libc = "0.2"
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
minijinja = "2"

[profile.release]
opt-level = 3

[features]
custom-protocol = ["tauri/custom-protocol"]
